--- a/docs/cloud/integrations/bi/connect-bi-tool.mdx
+++ b/docs/cloud/integrations/bi/connect-bi-tool.mdx
@@ -14,15 +14,15 @@ This will provide you end-to-end data lineage to understand your downstream depe
 - **Change impact**: Analyze which exposures will be impacted by a planned change.
 - **Unused datasets**: Detect datasets that no exposure consumes, that could be removed to save costs.
 
-
-<video
-autoplay
-muted
-loop
-playsinline
-className="w-full aspect-video"
+<iframe
+width="700"
+height="400"
 src="https://res.cloudinary.com/diuctyblm/video/upload/v1710790204/colum-level-lineage-to-bi-better_c00lz0.mp4"
-></video>
+frameborder="0"
+allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+allowfullscreen
+alt="Elementary Lineage"
+></iframe>
 
 ### Supported BI tools
 
