--- a/docs/features/anomaly-detection/automated-monitors.mdx
+++ b/docs/features/anomaly-detection/automated-monitors.mdx
@@ -41,7 +41,7 @@ By default, automated monitors failures **don't create alerts**.
 
 To activate alerts on automated monitors, navigate to `Setup > Alert Rules`.
 - To alert on all automated monitors failures - Change the default rule (#1) alert categories to include automated monitors.
-- To alert on specific datasets - Change / Create alert rules for these specific datasets, and iclude automated monitors in their alert categories.
+- To alert on specific datasets - Change / Create alert rules for these specific datasets, and include automated monitors in their alert categories.
 
 <Frame>
   <div className="dark:bg-white rounded-md p-1">
