--- a/docs/features/alerts-and-incidents/alerts-and-incidents-overview.mdx
+++ b/docs/features/alerts-and-incidents/alerts-and-incidents-overview.mdx
@@ -24,7 +24,7 @@ you will be able to track all open and historical incidents, and get metrics on 
 - **Alert distribution rules** - Alerts should be sent to relevant recipients. By creating [Alert Rules](/features/alerts-and-incidents/alert-rules), alerts can be distributed to different channels and systems.
 - **Incidents management** - When alerts are distributed to different channels, it can become hard to track what is open. Elementary offers a centralized Incidents page to monitor what is open, and manage incident properties: **assignee**, **status** and **severity**.  
 - **Grouping alerts to incidents** - New failures related to already open incidents will not trigger new alerts, and will be automatically added to the opgoing incident. This reduces noise and alerts fatigue.  
-- **Automated resolution** - When there is a succesful run that means an open incident is resolved, Elementary will automatically resolve the incident. This will help you manage the state of incidents and communicate it to stake holders in real time. 
+- **Automated resolution** - When there is a successful run that means an open incident is resolved, Elementary will automatically resolve the incident. This will help you manage the state of incidents and communicate it to stake holders in real time. 
 
 ## Alert types
 
