fix broken links

--- a/docs/x_old/understand-elementary/elementary-report-ui.mdx
+++ b/docs/x_old/understand-elementary/elementary-report-ui.mdx
@@ -7,8 +7,8 @@ the [dbt-package](/guides/modules-overview/dbt-package) tables, which includes d
 test results, Elementary anomaly detection results, dbt artifacts, etc.
 
 In order to visualize the data from
-the [dbt-package](/general/contributions#contributing-to-the-dbt-package) tables, use
-the [CLI](/understand-elementary/cli-install) you can generate the Elementary UI.
+the [dbt-package](/oss/general/contributions#contributing-to-the-dbt-package) tables, use
+the [CLI](/oss/cli-install) you can generate the Elementary UI.
 After installing and configuring the CLI, execute the command:
 
 ```shell
@@ -111,4 +111,4 @@ test failure, for example on an exposure or a dashboard in the data stack.
 The data tests report UI can be sent via Slack, Google Cloud Storage, or Amazon S3 when you
 run `edr send-report`.
 
-Refer to [this guide](/quickstart/share-report-ui) for detailed instructions.
+Refer to [this guide](/oss/guides/share-report-ui) for detailed instructions.
