update name and fix screenshots

--- a/docs/features/anomaly-detection/metrics.mdx
+++ b/docs/features/anomaly-detection/metrics.mdx
@@ -1,6 +1,6 @@
 ---
-title: Opt-In Monitors
-sidebarTitle: "Opt-in monitors"
+title: Metrics
+sidebarTitle: "Metrics"
 ---
 
 In Elementary, you can monitor any metric you want on the content of your data, view the metric and set up anomaly detection tests on it!
@@ -11,7 +11,6 @@ Elementary uses a type of dbt test to collect metrics on your data and sync them
 The metrics will be collected each time you run `dbt test`, in a way that is similar to how training data for anomaly tests is collected.
 A metric can be collected with or without an anomaly detection test configured on it.
 
-<img src="https://res.cloudinary.com/dvmtceykh/image/upload/v1725882221/Screenshot_2024-08-27_at_11.58.41_nqtxrj.png" alt="Metrics screen in Elementary" />
 <img src="https://res.cloudinary.com/dvmtceykh/image/upload/v1725882221/Screenshot_2024-08-27_at_11.59.43_ieovck.png" alt="Metrics screen in Elementary" />
 <img src="https://res.cloudinary.com/dvmtceykh/image/upload/v1725882220/Screenshot_2024-08-27_at_11.59.29_h7mloh.png" alt="Metrics screen in Elementary" />
 
