--- a/docs/features/alerts-and-incidents/incident-management.mdx
+++ b/docs/features/alerts-and-incidents/incident-management.mdx
@@ -19,7 +19,7 @@ The page provides a view of all incidents, and useful filters:
 <iframe
 width="700"
 height="400"
-src="https://res.cloudinary.com/diuctyblm/video/upload/v1719927342/incidents-wide_ki16tu.mp4"
+src="https://res.cloudinary.com/dvmtceykh/video/upload/v1727258471/incidents_new_vid_utv3sq.mp4"
 frameborder="0"
 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
 allowfullscreen
@@ -35,19 +35,19 @@ These can be set in the Incidents page, or from an alert in integrations that su
 - **Incident status**: Will be set to `open` by default, and can be changed to `Acknowledged` and back to `Open`. When an alert is manually or automatically set as `Resolved`, it will close and will no longer be modified.
 - **Incident assignee**: An incident can be assigned to any user on the team, and they will be notified.
     - If you assign an incident to a user, it is recommended to leave the incident `Open` until the user changes status to `Acknowledged`.
-- **Incident severity**: Users can set a severity level (High, Low, Normal, Critical) to an incident. _Coming soon_ Severity will be automated by an analysis of the impacted assets.
+- **Incident severity**: Users can set a severity level (High, Low, Normal, Critical) to an incident. _Coming soon_ : Severity will be automated by an analysis of the impacted assets.
 
 ## Incidents overview and metrics
 
-The top bar of the page present aggregated metrics on incidents, to provide an overall status. 
-You will also be able to track your average resolution time.
+The incidents are divided into categories based on their status, and the user can view the number of incidents in each category by severity.
+For resolved incidents, the user can view the average resolution time.
 
-_ _Coming soon_ _ The option to create and share a periodic summary of incidents will be supported in the future.
+_Coming soon_ : The option to create and share a periodic summary of incidents will be supported in the future.
 
 <Frame>
 <div className="dark:bg-white rounded-md p-1">
   <img
-    src="https://res.cloudinary.com/diuctyblm/image/upload/v1719926968/Untitled_3_nvhcix.png"
+    src="https://res.cloudinary.com/dvmtceykh/image/upload/v1727264653/Incident_MGT_Overview_tfmrtj.png"
     alt="Incidents overview"
   />
 </div>
