--- a/docs/_snippets/guides/alerts-code-configuration.mdx
+++ b/docs/_snippets/guides/alerts-code-configuration.mdx
@@ -45,174 +45,19 @@ Elementary prioritizes configuration in the following order:
 
 #### Owner
 
-Elementary enriches alerts with [owners for models or tests](https://docs.getdbt.com/reference/resource-configs/meta#designate-a-model-owner)).
-
-- If you want the owner to be tagged on slack use '@' and the email prefix of the slack user (@jessica.jones to tag jessica.jones@marvel.com).
-- You can configure a single owner or a list of owners (`["@jessica.jones", "@joe.joseph"]`).
-
-<CodeGroup>
-
-```yml model
-models:
-  - name: my_model_name
-    meta:
-      owner: "@jessica.jones"
-```
-
-```yml test
-tests:
-  - not_null:
-    meta:
-      owner: ["@jessica.jones", "@joe.joseph"]
-```
-
-```yml test/model config block
-{{ config(
-    tags=["Tag1","Tag2"]
-    meta={
-        "description": "This is a description",
-        "owner": "@jessica.jones"
-    }
-) }}
-```
-
-```yml dbt_project.yml
-models:
-  path:
-    subfolder:
-      +meta:
-        owner: "@jessica.jones"
-
-tests:
-  path:
-    subfolder:
-      +meta:
-        owner: "@jessica.jones"
-```
-
-</CodeGroup>
+<Snippet file="alerts/owner.mdx" />
 
 #### Subscribers
 
-If you want additional users besides the owner to be tagged on an alert, add them as subscribers.
-
-- If you want the subscriber to be tagged on slack use '@' and the email prefix of the slack user (@jessica.jones to tag jessica.jones@marvel.com).
-- You can configure a single subscriber or a list (`["@jessica.jones", "@joe.joseph"]`).
-
-<CodeGroup>
-
-```yml model
-models:
-  - name: my_model_name
-    meta:
-      subscribers: "@jessica.jones"
-```
-
-```yml test
-tests:
-  - not_null:
-    meta:
-      subscribers: ["@jessica.jones", "@joe.joseph"]
-```
-
-```yml test/model config block
-{{ config(
-    meta={
-        "subscribers": "@jessica.jones"
-    }
-) }}
-```
-
-```yml dbt_project.yml
-models:
-  path:
-    subfolder:
-      +meta:
-        subscribers: "@jessica.jones"
-
-tests:
-  path:
-    subfolder:
-      +meta:
-        subscribers: "@jessica.jones"
-```
-
-</CodeGroup>
+<Snippet file="alerts/subscribers.mdx" />
 
 #### Test description
 
-Elementary supports configuring description for tests that are included in alerts.
-It's recommended to add an explanation of what does it mean if this test fails, so alert will include this context.
-
-<CodeGroup>
-
-```yml test
-tests:
-  - not_null:
-    meta:
-      description: "This is the test description"
-```
-
-```yml test config block
-{{ config(
-    tags=["Tag1","Tag2"]
-    meta={
-        description: "This is the test description"
-    }
-) }}
-```
-
-```yml dbt_project.yml
-tests:
-  path:
-    subfolder:
-      +meta:
-        description: "This is the test description"
-```
-
-</CodeGroup>
+<Snippet file="alerts/description.mdx" />
 
 #### Tags
 
-You can use [tags](https://docs.getdbt.com/reference/resource-configs/tags) to provide context to your alerts.
-
-- You can tag a group or a channel in a slack alert by adding `#channel_name` as a tag.
-- Tags are aggregated,so a test alert will include both the test and the parent model tags.
-
-<CodeGroup>
-
-```yml model
-models:
-  - name: my_model_name
-    tags: ["#marketing", "#data_ops"]
-```
-
-```yml test
-tests:
-  - not_null:
-    tags: ["#marketing", "#data_ops"]
-```
-
-```yml test/model config block
-{{ config(
-    tags=["#marketing", "#data_ops"]
-    }
-) }}
-```
-
-```yml dbt_project.yml
-models:
-  path:
-    subfolder:
-      tags: ["#marketing", "#data_ops"]
-
-tests:
-  path:
-    subfolder:
-      tags: ["#marketing", "#data_ops"]
-```
-
-</CodeGroup>
+<Snippet file="alerts/tags.mdx" />
 
 ### Alerts distribution
 
