link fix (@roni)

--- a/docs/quickstart.mdx
+++ b/docs/quickstart.mdx
@@ -8,7 +8,7 @@ icon: "circle-play"
 
 ### Need help with onboarding?
 
-We can provide [support on Slack](https://elementary-data.com/community) or hop on a [guided onboarding call](https://savvycal.com/MaayanSa/df29881c).
+We can provide [support on Slack](https://elementary-data.com/community) or hop on a [guided onboarding call](https://cal.com/maayansa/elementary-intro-docs).
 
 ## What's next?
 
