power bi icon fix

--- a/docs/overview/cloud-vs-oss.mdx
+++ b/docs/overview/cloud-vs-oss.mdx
@@ -8,7 +8,7 @@ icon: "list-check"
 ### Elementary Cloud
 Ideal for teams monitoring mission-critical data pipelines, requiring guaranteed uptime and reliability, short-time-to-value, advanced features, collaboration, and professional support. The solution is secure by design, and requires no access to your data from cloud.
 
-### Elementary Community
+### Elementary OSS
 An open-source CLI tool you can deploy and orchestrate to send Slack alerts and self-host the Elementary report. It is best for data and analytics engineers that require basic observability capabilities or for evaluating features without vendor approval.
 
 ### Features comparison
@@ -37,7 +37,7 @@ An open-source CLI tool you can deploy and orchestrate to send Slack alerts and 
 | Additional alert destinations: <br/> PagerDuty, OpsGenie, Webhook     |          ❌          |         ✅         |
 | Alert actions                                                         |          ❌          |         ✅         |
 | Data catalog                                                          |          ❌          |         ✅         |
-| Data Health Score                                                     |          ❌          |         ✅         |
+| Data Health Scores                                                    |          ❌          |         ✅         |
 | Incident management                                                   |          ❌          |         ✅         |
 | **Deployment, security and service**                                  |                     |                   |
 | Deployment                                                            |  Self hosted, CLI   |   Cloud service   |
