--- a/docs/cloud/integrations/bi/explo.mdx
+++ b/docs/cloud/integrations/bi/explo.mdx
@@ -3,7 +3,7 @@ title: "Explo"
 ---
 
 <Card
-title="Power BI"
+title="Explo"
 href="https://tally.so/r/3N6DlW?integration=Explo"
 icon={
 <svg width="52" height="28" viewBox="0 0 52 28" fill="none" xmlns="http://www.w3.org/2000/svg">
