--- a/docs/cloud/integrations/bi/hex.mdx
+++ b/docs/cloud/integrations/bi/hex.mdx
@@ -3,7 +3,7 @@ title: "Hex"
 ---
 
 <Card
-title="Power BI"
+title="Hex"
 href="https://tally.so/r/3N6DlW?integration=Hex"
 icon={
 <svg width="52" height="28" viewBox="0 0 52 28" fill="none" xmlns="http://www.w3.org/2000/svg">
