--- a/docs/guides/modules-overview/dbt-package.mdx
+++ b/docs/guides/modules-overview/dbt-package.mdx
@@ -17,7 +17,7 @@ The repository and source code of the Elementary dbt package can be [found here]
 
 The Elementary dbt package is designed to power data observability use cases for dbt pipelines.
 This package will upload logs and metadata generated from your runs as dbt artifacts into tables in your datawarehouse.
-Additionaly, it offers a wide range of tests, including anomalies in volume, freshness, columns and different dimensions of your data.
+Additionally, it offers a wide range of tests, including anomalies in volume, freshness, columns and different dimensions of your data.
 
 The impact of the package on **`dbt run`** is minimal, and most of the processing happens as part of the data tests that are executed on **`dbt test`**.
 
