--- a/docs/cloud/integrations/bi/looker.mdx
+++ b/docs/cloud/integrations/bi/looker.mdx
@@ -55,7 +55,7 @@ Choose the Looker BI connection and provide the following details to validate an
 - **LookML code repository**:
   - Token
     - [Github](https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/managing-your-personal-access-tokens#creating-a-personal-access-token-classic)
-    - [Gitlab](https://docs.gitlab.com/ee/user/project/settings/project_access_tokens.html)
+    - [Gitlab](https://docs.gitlab.com/ee/user/project/settings/project_access_tokens.html) - make sure the role is `developer` and the scopes include `read_api, read_repository`
   - Repository - The repository name where your LookML code is.
 
 <Frame caption="Connect Looker to Elementary environment">
