--- a/docs/_snippets/products-cards.mdx
+++ b/docs/_snippets/products-cards.mdx
@@ -17,6 +17,6 @@ Read about the key features and product offerings:
     title="Elementary OSS"
     icon="square-terminal"
     iconType="solid"
-    href="/overview/elementary-oss"
+    href="/oss/oss-introduction"
   ></Card>
 </CardGroup>
