--- a/docs/quickstart.mdx
+++ b/docs/quickstart.mdx
@@ -12,7 +12,7 @@ We can provide [support on Slack](https://elementary-data.com/community) or hop 
 
 ### Demo Videos
 
-🎥 Learn more about features available on Elementary Cloud by watching the [demo videos](https://https://www.elementary-data.com/elementary-cloud-demo-videos).
+🎥 Learn more about features available on Elementary Cloud by watching the [demo videos](https://www.elementary-data.com/elementary-cloud-demo-videos).
 
 ## What's next?
 
