--- a/docs/cloud/integrations/catalog/atlan.mdx
+++ b/docs/cloud/integrations/catalog/atlan.mdx
@@ -2,8 +2,10 @@
 title: "Atlan"
 ---
 
-Elementary integrates with Atlan by pushing key insights as custom metadata to shared assets—
-assets visible in both Elementary and Atlan.
+Elementary aims to meet business users where they live, so we believe it's important to allow anyone who uses data to
+ know whether the data is healthy quickly, easily and without any technical knowledge required. This is why we integrated with Atlan.
+
+The integration works by pushing key insights to Atlan assets as custom metadata.
 This metadata includes data health scores and open incidents, providing visibility into the quality and status of your
 data.
 
